--- a/nobug-shop-eureka-server/pom.xml
+++ b/nobug-shop-eureka-server/pom.xml
@@ -3,10 +3,9 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.2.5.RELEASE</version>
-        <relativePath/> <!-- lookup parent from repository -->
+        <groupId>com.nobug</groupId>
+        <artifactId>nobug-shop-dependencies</artifactId>
+        <version>1.0.0-SNAPSHOT</version>
     </parent>
     <groupId>com.nobug</groupId>
     <artifactId>nobug-shop-eureka-server</artifactId>
@@ -14,10 +13,7 @@
     <name>nobug-shop-eureka-server</name>
     <description>Eureka Server for Spring Boot</description>
 
-    <properties>
-        <java.version>1.8</java.version>
-        <spring-cloud.version>Hoxton.SR1</spring-cloud.version>
-    </properties>
+
 
     <dependencies>
         <dependency>
