--- a/nobug-shop-basic/nobug-shop-dependencies/pom.xml
+++ b/nobug-shop-basic/nobug-shop-dependencies/pom.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
@@ -13,8 +14,6 @@
     <groupId>com.nobug</groupId>
     <artifactId>nobug-shop-dependencies</artifactId>
     <version>1.0.0-SNAPSHOT</version>
-    <name>nobug-shop-dependencies</name>
-    <description>Dependencies for Spring Boot</description>
 
     <properties>
         <java.version>1.8</java.version>
@@ -24,52 +23,47 @@
     </properties>
 
     <dependencyManagement>
-    <dependencies>
+        <dependencies>
 
+            <dependency>
+                <groupId>com.nobug</groupId>
+                <artifactId>nobug-shop-entity</artifactId>
+                <version>${parent.version}</version>
+            </dependency>
 
-        <dependency>
-            <groupId>com.nobug</groupId>
-            <artifactId>nobug-shop-common</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
-        <dependency>
-            <groupId>com.nobug</groupId>
-            <artifactId>nobug-shop-entity</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
-        <dependency>
-            <groupId>org.mybatis.spring.boot</groupId>
-            <artifactId>mybatis-spring-boot-starter</artifactId>
-            <version>${mybatis.version}</version>
-        </dependency>
+            <dependency>
+                <groupId>com.nobug</groupId>
+                <artifactId>nobug-shop-mapper</artifactId>
+                <version>${parent.version}</version>
+            </dependency>
 
-        <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
-            <version>${mysql.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-dependencies</artifactId>
-            <version>${spring-cloud.version}</version>
-            <type>pom</type>
-            <scope>import</scope>
-        </dependency>
+            <dependency>
+                <groupId>org.mybatis.spring.boot</groupId>
+                <artifactId>mybatis-spring-boot-starter</artifactId>
+                <version>${mybatis.version}</version>
+            </dependency>
 
-        <dependency>
-            <groupId>com.nobug</groupId>
-            <artifactId>nobug-shop-basic</artifactId>
-            <version>${parent.version}</version>
-        </dependency>
-    </dependencies>
+            <dependency>
+                <groupId>mysql</groupId>
+                <artifactId>mysql-connector-java</artifactId>
+                <version>${mysql.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-dependencies</artifactId>
+                <version>${spring-cloud.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+
+            <dependency>
+                <groupId>com.nobug</groupId>
+                <artifactId>nobug-shop-basic</artifactId>
+                <version>${parent.version}</version>
+            </dependency>
+        </dependencies>
     </dependencyManagement>
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-            </plugin>
-        </plugins>
-    </build>
+
 
 </project>
