--- a/nobug-shop-eureka-server/src/main/resources/application-prod.yml
+++ b/nobug-shop-eureka-server/src/main/resources/application-prod.yml
@@ -7,7 +7,7 @@ server:
 
 eureka:
   instance:
-    hostname: localhost
+    hostname: 47.98.124.70
   client:
     register-with-eureka: true
     fetch-registry: false
