--- a/nobug-shop-eureka-server/src/main/resources/application-prod.yml
+++ b/nobug-shop-eureka-server/src/main/resources/application-prod.yml
@@ -7,9 +7,9 @@ server:
 
 eureka:
   instance:
-    hostname: 47.98.124.70
+    hostname: 47.93.43.160
   client:
-    register-with-eureka: true
+    register-with-eureka: false
     fetch-registry: false
     service-url:
       defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
