--- a/nobug-shop-service/nobug-shop-service-payment/src/main/resources/application.yml
+++ b/nobug-shop-service/nobug-shop-service-payment/src/main/resources/application.yml
@@ -2,4 +2,31 @@ server:
   port: 8765
 
 
+spring:
+  application:
+    name: nobug-shop-service-payment
+  datasource:
+    driver-class-name: com.mysql.jdbc.Driver
+    url: jdbc:mysql://localhost:3306/shop?characterEncoding=utf8&useSSL=false&serverTimezone=UTC&rewriteBatchedStatements=true
+    username: root
+    password: root
+    type: com.alibaba.druid.pool.DruidDataSource
+
+
+eureka:
+  instance:
+    hostname: localhost
+  client:
+    register-with-eureka: true
+    fetch-registry: true
+    service-url:
+      defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
+
+
+
+mybatis:
+  mapper-locations: classpath:mapper/*.xml
+  configuration:
+    map-underscore-to-camel-case: true
+  type-aliases-package: com.cxz.springcloud.entity
 
