--- a/nobug-shop-basic/nobug-shop-mapper/pom.xml
+++ b/nobug-shop-basic/nobug-shop-mapper/pom.xml
@@ -6,7 +6,11 @@
 
     <groupId>com.nobug</groupId>
     <artifactId>nobug-shop-mapper</artifactId>
+    <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
+    <modules>
+        <module>nobug-shop-search-mapper</module>
+    </modules>
 
 
 </project>
