--- a/nobug-shop-service/nobug-shop-service-payment/src/main/resources/application.yml
+++ b/nobug-shop-service/nobug-shop-service-payment/src/main/resources/application.yml
@@ -3,30 +3,31 @@ server:
 
 
 spring:
-  application:
-    name: nobug-shop-service-payment
   datasource:
     driver-class-name: com.mysql.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/shop?characterEncoding=utf8&useSSL=false&serverTimezone=UTC&rewriteBatchedStatements=true
+    url: jdbc:mysql://localhost:3306/springcloud?characterEncoding=utf8
     username: root
     password: root
     type: com.alibaba.druid.pool.DruidDataSource
-
-
-eureka:
-  instance:
-    hostname: localhost
-  client:
-    register-with-eureka: true
-    fetch-registry: true
-    service-url:
-      defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
-
+  application:
+    name: nobug-shop-service-payment
 
 
 mybatis:
   mapper-locations: classpath:mapper/*.xml
   configuration:
     map-underscore-to-camel-case: true
-  type-aliases-package: com.cxz.springcloud.entity
+  type-aliases-package: com.nobug.entity
+
+
+eureka:
+  client:
+    register-with-eureka: true
+    fetch-registry: true
+    service-url:
+      defaultZone: http://localhost:8761/eureka/
+
+
+
+
 
