--- a/nobug-shop-service/nobug-shop-service-search/pom.xml
+++ b/nobug-shop-service/nobug-shop-service-search/pom.xml
@@ -39,6 +39,21 @@
             <artifactId>nobug-shop-common</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.mybatis.spring.boot</groupId>
+            <artifactId>mybatis-spring-boot-starter</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>druid-spring-boot-starter</artifactId>
+            <version>1.1.10</version>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
