--- a/nobug-shop-service/nobug-shop-service-search/src/main/resources/application.yml
+++ b/nobug-shop-service/nobug-shop-service-search/src/main/resources/application.yml
@@ -5,6 +5,12 @@ spring:
   data:
     solr:
       host: http://47.111.247.209:8983/solr/ik_core
+    datasource:
+      url: jdbc:mysql://47.98.124.70:3306/nobug?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=Asia/Shanghai
+      username: root
+      password: root
+      druid:
+        driver: com.mysql.jdbc.Driver
 
 
 
@@ -17,3 +23,5 @@ eureka:
   client:
     service-url:
       defaultZone: http://${eureka.instance.hostname}:8761/eureka/
+
+imageService: http://localhsot
