--- a/nobug-shop-service/nobug-shop-service-send-mail/pom.xml
+++ b/nobug-shop-service/nobug-shop-service-send-mail/pom.xml
@@ -16,6 +16,11 @@
 
     <dependencies>
         <dependency>
+            <groupId>com.nobug</groupId>
+            <artifactId>nobug-shop-common</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-mail</artifactId>
         </dependency>
