--- a/nobug-shop-service/nobug-shop-service-send-mail/src/main/resources/application.yml
+++ b/nobug-shop-service/nobug-shop-service-send-mail/src/main/resources/application.yml
@@ -1,8 +1,9 @@
 spring:
+  # 配置邮件发送账号
   mail:
     host: smtp.qq.com
-    username:
-    password:
+    username: 964443622@qq.com
+    password: zjjolsvqrrnebbai
     default-encoding: utf-8
   application:
     name: nobug-shop-service-send-mail
@@ -15,4 +16,4 @@ eureka:
     service-url:
       defaultZone: http://localhost:8761/eureka/
 
-# todo redis
+activeServerUrl: http://localhost:8762/email/active/account/
