--- a/nobug-shop-service/nobug-shop-service-payment/pom.xml
+++ b/nobug-shop-service/nobug-shop-service-payment/pom.xml
@@ -53,6 +53,26 @@
             <artifactId>lombok</artifactId>
             <optional>true</optional>
         </dependency>
+<!--        微信支付-->
+        <!-- https://mvnrepository.com/artifact/com.github.wxpay/wxpay-sdk -->
+        <dependency>
+            <groupId>com.github.wxpay</groupId>
+            <artifactId>wxpay-sdk</artifactId>
+            <version>0.0.3</version>
+        </dependency>
+<!--   httpclient工具类-->
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>4.5.3</version>
+        </dependency>
+
+<!--        <dependency>-->
+<!--            <groupId>io.goeasy</groupId>-->
+<!--            <artifactId>goeasy-sdk</artifactId>-->
+<!--            <version>0.3.8</version>-->
+<!--        </dependency>-->
+
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
