--- a/nobug-shop-basic/nobug-shop-mapper/nobug-shop-mapper-user-info/src/main/resources/application.yml
+++ b/nobug-shop-basic/nobug-shop-mapper/nobug-shop-mapper-user-info/src/main/resources/application.yml
@@ -6,7 +6,7 @@ spring:
     name: nobug-shop-mapper-user-info
   datasource:
     driver-class-name: com.mysql.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/shop?characterEncoding=utf8
+    url: jdbc:mysql://47.98.124.70:3306/shop?characterEncoding=utf-8
     username: root
     password: root
     type: com.alibaba.druid.pool.DruidDataSource
@@ -21,3 +21,9 @@ mybatis:
     map-underscore-to-camel-case: true
   mapper-locations: classpath:mapper/*.xml
   type-aliases-package: entity
+
+logging:
+  level:
+    com:
+      nobug:
+        mapper: debug
