--- a/nobug-shop-eureka-server/src/main/resources/application-dev.yml
+++ b/nobug-shop-eureka-server/src/main/resources/application-dev.yml
@@ -9,7 +9,7 @@ eureka:
   instance:
     hostname: localhost
   client:
-    register-with-eureka: true
+    register-with-eureka: false
     fetch-registry: false
     service-url:
       defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
