--- a/nobug-shop-service/nobug-shop-service-payment/pom.xml
+++ b/nobug-shop-service/nobug-shop-service-payment/pom.xml
@@ -60,19 +60,19 @@
             <artifactId>wxpay-sdk</artifactId>
             <version>0.0.3</version>
         </dependency>
-<!--   httpclient工具类-->
+
         <dependency>
-            <groupId>org.apache.httpcomponents</groupId>
-            <artifactId>httpclient</artifactId>
-            <version>4.5.3</version>
+            <groupId>tk.mybatis</groupId>
+            <artifactId>mapper</artifactId>
+            <version>3.1.2</version>
         </dependency>
-
-<!--        <dependency>-->
-<!--            <groupId>io.goeasy</groupId>-->
-<!--            <artifactId>goeasy-sdk</artifactId>-->
-<!--            <version>0.3.8</version>-->
-<!--        </dependency>-->
-
+<!--        支付宝支付-->
+        <!-- https://mvnrepository.com/artifact/com.alipay.sdk/alipay-sdk-java -->
+        <dependency>
+            <groupId>com.alipay.sdk</groupId>
+            <artifactId>alipay-sdk-java</artifactId>
+            <version>3.7.110.ALL</version>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
