--- a/nobug-shop-service/nobug-shop-service-send-sms/pom.xml
+++ b/nobug-shop-service/nobug-shop-service-send-sms/pom.xml
@@ -9,10 +9,10 @@
     </parent>
 
     <groupId>com.nobug</groupId>
-    <artifactId>nobug-shop-web-register</artifactId>
+    <artifactId>nobug-shop-service-send-sms</artifactId>
     <version>1.0.0-SNAPSHOT</version>
-    <name>nobug-shop-web-register</name>
-    <description>Register for Spring Boot</description>
+    <name>nobug-shop-service-send-sms</name>
+    <description>Send SMS for Spring Boot</description>
 
     <properties>
         <java.version>1.8</java.version>
@@ -26,17 +26,16 @@
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
         </dependency>
-        <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-netflix-ribbon</artifactId>
-        </dependency>
-
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
