rock: 完善发送手机验证码api的调用，注册服务竣工。

--- a/nobug-shop-cache/nobug-shop-cache-redis-register/src/main/resources/application.yml
+++ b/nobug-shop-cache/nobug-shop-cache-redis-register/src/main/resources/application.yml
@@ -6,6 +6,13 @@ spring:
     port: 6379
     password: 123456
     database: 1
+#    redis连接池
+    lettuce:
+      pool:
+        max-idle: 30
+        min-idle: 10
+        max-active: 30
+        max-wait: 10000
 
 server:
   port: 6301
