--- a/nobug-shop-service/nobug-shop-service-send-sms/pom.xml
+++ b/nobug-shop-service/nobug-shop-service-send-sms/pom.xml
@@ -36,6 +36,23 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
         </dependency>
+        <!-- sms第三方api需要的包 -->
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>4.5.11</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpcore</artifactId>
+            <version>4.4.13</version>
+        </dependency>
+        <dependency>
+            <groupId>commons-logging</groupId>
+            <artifactId>commons-logging</artifactId>
+            <version>1.2</version>
+        </dependency>
+        <!-- sms第三方api需要的包 end -->
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
