rock: 开发登录服务，使用Feign通讯，启用OKHttp和Hystrix,使用Redis存储微服务模式下的用户登录状态,cookie存储redis_user_key。

--- a/nobug-shop-web/nobug-shop-web-login/src/main/resources/application.yml
+++ b/nobug-shop-web/nobug-shop-web-login/src/main/resources/application.yml
@@ -14,3 +14,6 @@ eureka:
 feign:
   hystrix:
     enabled: true
+  okhttp:
+    enabled: true
+#    todo okhttp\u6682\u65F6\u6CA1\u6709\u81EA\u5B9A\u4E49\u914D\u7F6E\u7C7B
