rock: 登录模块完成。主要修复了http传输VO时，jackson将VO中的对象转成LinketHashMap后，无法强转回java对象的BUG，解决办法是使用ObjectMapper进行类型转换。

--- a/nobug-shop-web/nobug-shop-web-login/src/main/resources/application.yml
+++ b/nobug-shop-web/nobug-shop-web-login/src/main/resources/application.yml
@@ -17,3 +17,20 @@ feign:
   okhttp:
     enabled: true
 #    todo okhttp\u6682\u65F6\u6CA1\u6709\u81EA\u5B9A\u4E49\u914D\u7F6E\u7C7B
+
+hystrix:
+  command:
+    default:
+      execution:
+        timeout:
+          enabled: true
+      isolation:
+        thread:
+          #\u5355\u4E2A\u8BF7\u6C42\u8D85\u65F615s,+\u91CD\u8BD5>30s\uFF0C\u8D8545s\u5219\u7194\u65AD
+          timeoutInMilliseconds: 45000
+
+ribbon:
+  #ribbon\u8BF7\u6C42\u8FDE\u63A5\u7684\u8D85\u65F6\u65F6\u95F4- \u9650\u52365\u79D2\u5185\u5FC5\u987B\u8BF7\u6C42\u5230\u670D\u52A1\uFF0C\u5E76\u4E0D\u9650\u5236\u670D\u52A1\u5904\u7406\u7684\u8FD4\u56DE\u65F6\u95F4
+  connectTimeout: 5000
+  #\u8BF7\u6C42\u5904\u7406\u7684\u8D85\u65F6\u65F6\u95F4 \u4E0B\u7EA7\u670D\u52A1\u54CD\u5E94\u6700\u5927\u65F6\u95F4,\u8D85\u51FA\u65F6\u95F4\u6D88\u8D39\u65B9\uFF08\u8DEF\u7531\u4E5F\u662F\u6D88\u8D39\u65B9\uFF09\u8FD4\u56DEtimeout,\u8D85\u65F6\u65F6\u95F4\u4E0D\u53EF\u5927\u4E8E\u65AD\u8DEF\u5668\u7684\u8D85\u65F6\u65F6\u95F4
+  readTimeout: 10000
