--- a/nobug-shop-basic/nobug-shop-dependencies/pom.xml
+++ b/nobug-shop-basic/nobug-shop-dependencies/pom.xml
@@ -34,7 +34,11 @@
 
     <dependencyManagement>
         <dependencies>
-
+            <dependency>
+                <groupId>com.nobug</groupId>
+                <artifactId>nobug-shop-common</artifactId>
+                <version>1.0-SNAPSHOT</version>
+            </dependency>
             <dependency>
                 <groupId>com.nobug</groupId>
                 <artifactId>nobug-shop-entity</artifactId>
