--- a/nobug-shop-basic/nobug-shop-mapper/nobug-shop-mapper-product/pom.xml
+++ b/nobug-shop-basic/nobug-shop-mapper/nobug-shop-mapper-product/pom.xml
@@ -3,10 +3,9 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.2.5.RELEASE</version>
-        <relativePath/> <!-- lookup parent from repository -->
+        <groupId>com.nobug</groupId>
+        <artifactId>nobug-shop-dependencies</artifactId>
+        <version>1.0.0-SNAPSHOT</version>
     </parent>
     <groupId>com.nobug</groupId>
     <artifactId>nobug-shop-mapper-product</artifactId>
@@ -16,14 +15,16 @@
 
     <properties>
         <java.version>1.8</java.version>
-        <spring-cloud.version>Hoxton.SR3</spring-cloud.version>
     </properties>
 
     <dependencies>
         <dependency>
+            <groupId>com.nobug</groupId>
+            <artifactId>nobug-shop-common</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.mybatis.spring.boot</groupId>
             <artifactId>mybatis-spring-boot-starter</artifactId>
-            <version>2.1.2</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
@@ -32,7 +33,6 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <version>1.18.12</version>
         </dependency>
         <dependency>
             <groupId>tk.mybatis</groupId>
@@ -53,7 +53,6 @@
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>druid-spring-boot-starter</artifactId>
-            <version>1.1.16</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
