--- a/nobug-shop-basic/nobug-shop-mapper/nobug-shop-mapper-user-info/src/main/resources/application.yml
+++ b/nobug-shop-basic/nobug-shop-mapper/nobug-shop-mapper-user-info/src/main/resources/application.yml
@@ -20,7 +20,7 @@ mybatis:
   configuration:
     map-underscore-to-camel-case: true
   mapper-locations: classpath:mapper/*.xml
-  type-aliases-package: entity
+  type-aliases-package: com.nobug.entity
 
 logging:
   level:
