--- a/nobug-shop-service/nobug-shop-service-payment/src/main/resources/application.yml
+++ b/nobug-shop-service/nobug-shop-service-payment/src/main/resources/application.yml
@@ -17,7 +17,7 @@ mybatis:
   mapper-locations: classpath:mapper/*.xml
   configuration:
     map-underscore-to-camel-case: true
-  type-aliases-package: entity
+  type-aliases-package: com.nobug.entity
 
 
 eureka:
